--- a/10.2.html
+++ b/10.2.html
@@ -8,9 +8,7 @@
   <body></body>
   <script>
     const numbers = [1, 2, 3, 4, 5, 6];
-    const evenNumbers = numbers.filter(function (num) {
-      return num % 2 === 0;
-    });
+    const evenNumbers = numbers.filter((num) => num % 2 === 0);
     console.log(evenNumbers);
   </script>
 </html>
